Fix strange problem with canvas overlapping.
 * For some reason the pattern canvas was overlapping the right border
of the div under certain conditions. Increased the border width by 0.5
pixels seems to resolve it, needs more investigation.

--- a/src/components/pattern_editor/styles.css
+++ b/src/components/pattern_editor/styles.css
@@ -35,7 +35,7 @@
 }
 
 .hscroll .pattern .patterndata {
-    border: 1px solid white;
+    border: 1.5px solid white;
     flex: 1 1 auto;
     overflow-x: auto;
     overflow-y: hidden;
